# libmodjpeg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  compose.c  compose.h  configure  configure.ac  convolve.c  convolve.h  dct.c  dct.h  distclean.sh  dropon.c  dropon.h  effect.c  effect.h  image.c  image.h  init.c  init.h  jpeg.c  jpeg.h  libmodjpeg.h  logo.c  logo.h  matrix.c  matrix.h  memory.c  memory.h  modjpeg.c  outline  outline.c  read.c  read.h  resample.c  resample.h  (+3 more)
contrib/: CMakeLists.txt  modjpeg  modjpeg.c
man/man1/: betterjpeg.1  modjpeg.1
man/man3/: libmodjpeg.3
scripts/bash/: README.md  betterjpeg.sh
src/: CMakeLists.txt  compose.c  convolve.c  convolve.h  distclean.sh  dropon.c  effect.c  image.c  jpeg.c  jpeg.h  libmodjpeg.h
src/contrib/: CMakeLists.txt  modjpeg.c
src/contrib/images/: dropon.lua
